# kannada-digit-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  checkpoints.dvc  data.dvc  models.dvc  pyproject.toml
.dvc/: .gitignore  config
configs/: config.yaml  inference_config.yaml  training_config.yaml
configs/data/: default.yaml
configs/logger/: mlflow.yaml
configs/model/: conv_classifier.yaml  simple_classifier.yaml
configs/training/: default.yaml
configs/training/optimizer/: adam.yaml
configs/training/scheduler/: reduce_on_plateau.yaml
kannada_mnist/: commands.py  models.py  predict.py  test.py  train.py
kannada_mnist/lightning_modules/: data_module.py  infer_data_module.py  module.py
kannada_mnist/utilities/: build_config.py  constants.py  download_data.py  export_onnx.py  export_to_onnx.py  generate_predict_dataset.py  kannada_MNIST_dataset.py  transforms.py
