[project]
authors = [
  {name = "CameCome", email = "dim.dimof3@gmail.com"},
]
dependencies = [
  "torch (>=2.10.0,<3.0.0)",
  "torchvision (>=0.25.0,<0.26.0)",
  "lightning (>=2.6.1,<3.0.0)",
  "numpy (>=2.4.2,<3.0.0)",
  "pandas (<3)",
  "mlflow (>=3.9.0,<4.0.0)",
  "fire (>=0.7.1,<0.8.0)",
  "kagglehub (>=1.0.0,<2.0.0)",
]
description = "Model and utilities for handwritten Kannada digit recognition using the Kannada-MNIST dataset."
name = "kannada-mnist"
readme = "README.md"
requires-python = ">=3.13,<3.15"
version = "0.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[dependency-groups]
dev = [
  "pre-commit (>=4.5.1,<5.0.0)",
  "dvc (>=3.66.1,<4.0.0)",
  "hydra-core (>=1.3.2,<2.0.0)",
  "dvc-gdrive (>=3.0.1,<4.0.0)",
]

[tool.ruff]
format = {docstring-code-format = true}
line-length = 100

[tool.ruff.lint]
select = [
  # isort
  "I", # pycodestyle
  "E",
  "W", # Pyflakes
  "F",
]
